--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,5 @@
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-}
-
-body {
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-    background: red;
+    box-sizing: border-box;
 }
