--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,9 @@
     font-family: 'Arial', sans-serif;
     box-sizing: border-box;
 }
+
+body {
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+}
